Integrate bunjs (#21)
* Config setup convertion to Bun

* Testing setup corrections

* Test fixes

* APM removal && app.ts isolation improvements

* Update unit & feature tests to use bun testing methods

* Fix potentially undefined created channel in internal function calls

* Show logs option for unit tests logs

* Fix schema validation & type inference

* Compile everything using Bun except for 'routes/' and 'middleware/'

* Update Dockerfile

* Linting rule which allows numbers as key names

* Use correct path for '.env.production' in Dockerfile

* Include dev-dependency 'pino-pretty'

* Fix Docker Compose && Create .env if not yet created via Docker Compose

* Comment out Localstack in Docker Compose
